--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,11 @@ set(SOURCE_FILES src/main.cpp src/Game.cpp src/Game.h src/Constants.h)
 set(SDL2_INCLUDE_DIR lib/SDL2-x86_64-w64-mingw32/include/SDL2)
 set(SDL2_LIB_DIR lib/SDL2-x86_64-w64-mingw32/lib)
 
-include_directories(lib/lua-5.3.5_Win64_dllw6_lib/include)
-link_directories(lib/lua-5.3.5_Win64_dllw6_lib)
+set(LUA_INCLUDE_DIR lib/lua-5.3.5_Win64_dllw6_lib/include)
+set(LUA_LIB_DIR lib/lua-5.3.5_Win64_dllw6_lib)
 
-include_directories(${SDL2_INCLUDE_DIR})
-link_directories(${SDL2_LIB_DIR})
+include_directories(${SDL2_INCLUDE_DIR} ${LUA_INCLUDE_DIR})
+link_directories(${SDL2_LIB_DIR} ${LUA_LIB_DIR})
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
-
-target_link_libraries(${PROJECT_NAME} SDL2main SDL2_image SDL2_ttf SDL2_mixer SDL2)
-target_link_libraries(${PROJECT_NAME} lua53)
+target_link_libraries(${PROJECT_NAME} mingw32 SDL2main SDL2_image SDL2_ttf SDL2_mixer SDL2 lua53)
